--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -435,7 +435,7 @@
                   <font size="14"/>
                   <foreground color="-1041"/>
                   <name value="RULES"/>
-                  <preferredSize width="600" height="280"/>
+                  <preferredSize width="600" height="290"/>
                   <selectedTextColor color="-13947600"/>
                   <text value="SmartHire IQ Quiz App is a digital assessment tool that will test candidates intelligence and cognitive abilities through a series of carefully designed questions.&#10;&#10;The test will check candidates skills like  problem-solving, logical reasoning, critical-thinking and pattern recognition.&#10;&#10;- The questions have only one correct answer.&#10;- Questions have a difficulty rating and everyone gets the same amount of each.&#10;- The test has a timer that records how long it took the candidate to complete the test.&#10;&#10;- Icons in upper right if you want to change settings&#10;- There is a soothing jingle you can turn on/off&#10;- You can Opt-Out the leaderboard to be anonymous&#10;&#10;- When ready click the checkbox, Good luck!"/>
                 </properties>
@@ -476,10 +476,10 @@
                   <component id="7a38b" class="javax.swing.JLabel" binding="photoLbl">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
-                      <gridbag top="10" left="0" bottom="10" right="0" weightx="0.0" weighty="0.0"/>
+                      <gridbag top="10" left="50" bottom="10" right="0" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
-                      <preferredSize width="300" height="300"/>
+                      <preferredSize width="350" height="300"/>
                       <requestFocusEnabled value="false"/>
                       <text value=""/>
                     </properties>
@@ -487,7 +487,7 @@
                   <component id="e366f" class="javax.swing.JProgressBar" binding="progressBar">
                     <constraints>
                       <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
+                      <gridbag top="10" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
                       <background color="-14466981"/>
@@ -502,18 +502,18 @@
                   <grid id="11c1d" layout-manager="GridBagLayout">
                     <constraints>
                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag top="0" left="20" bottom="0" right="20" weightx="0.0" weighty="0.0"/>
+                      <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
                       <background color="-14466981"/>
-                      <preferredSize width="500" height="50"/>
+                      <preferredSize width="500" height="65"/>
                     </properties>
                     <border type="none"/>
                     <children>
                       <component id="1ba30" class="javax.swing.JRadioButton" binding="aLbl">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                          <gridbag top="0" left="0" bottom="0" right="5" weightx="0.0" weighty="0.0"/>
+                          <gridbag top="0" left="0" bottom="5" right="10" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <background color="-14466981"/>
@@ -530,7 +530,7 @@
                       <component id="22bf6" class="javax.swing.JRadioButton" binding="bLbl">
                         <constraints>
                           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                          <gridbag top="0" left="5" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                          <gridbag top="0" left="10" bottom="5" right="0" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <background color="-14466981"/>
@@ -544,7 +544,7 @@
                       <component id="73481" class="javax.swing.JRadioButton" binding="cLbl">
                         <constraints>
                           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                          <gridbag top="0" left="0" bottom="0" right="5" weightx="0.0" weighty="0.0"/>
+                          <gridbag top="5" left="0" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <background color="-14466981"/>
@@ -558,7 +558,7 @@
                       <component id="6434f" class="javax.swing.JRadioButton" binding="dLbl">
                         <constraints>
                           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                          <gridbag top="0" left="5" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                          <gridbag top="5" left="10" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <background color="-14466981"/>
@@ -576,7 +576,7 @@
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="50"/>
                       </grid>
-                      <gridbag top="0" left="40" bottom="0" right="40" weightx="0.0" weighty="0.0"/>
+                      <gridbag top="0" left="60" bottom="0" right="40" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
                       <background color="-3290691"/>
@@ -700,7 +700,7 @@
                   <component id="8feec" class="javax.swing.JButton" binding="finishBtn">
                     <constraints>
                       <grid row="3" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
+                      <gridbag top="0" left="0" bottom="10" right="0" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
                       <background color="-13282707"/>
@@ -758,12 +758,11 @@
                   <horizontalAlignment value="0"/>
                   <icon value="icons/volumeON 50x50.png"/>
                   <preferredSize width="55" height="55"/>
-                  <pressedIcon value="icons/volumeOFF 50x50.png"/>
                   <requestFocusEnabled value="false"/>
                   <selected value="false"/>
                   <text value=""/>
                   <toolTipText value="Background Music"/>
-                  <visible value="true"/>
+                  <visible value="false"/>
                 </properties>
               </component>
               <component id="6d4ec" class="javax.swing.JButton" binding="settingsButton" default-binding="true">
